[EJBCLIENT-358] Add -Djdk.attach.allowAttachSelf arg to surefire to make Byteman tests run in JDK9+